CICD/greetings/greetings6-deployment.yaml
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: greetings6-deployment
  labels:
    app: greetings6
spec:
  replicas: 1 
  selector:
    matchLabels:
      app: greetings6
  template:
    metadata:
      labels:
        app: greetings6
    spec:
      containers:
      - name: greetings1
        image: gcr.io/greetings6-202603/greetings6
        ports:
        - containerPort: 5000
